# prism

./: .gitignore  .overmind.env  Cargo.toml  Makefile  Procfile  Procfile.infra  docker-compose.yml  go.mod  go.sum
.cargo/: config.toml
.github/: ci.yaml
.github/workflows/: ci.yaml
dev/: bootstrap-localstack.sh  clickbench.sh
go/internal/clients/meta/: meta.go  meta_mock.go
go/pkg/must/: must.go
go/proto/: meta.pb.go  meta_grpc.pb.go
go/services/prism-api/: main.go
go/services/prism-api/cmd/: root.go  serve.go
go/services/prism-api/pkg/auth/: auth.go  auth_test.go
go/services/prism-api/pkg/config/: auth0.go
go/services/prism-infra-worker/: Dockerfile  log_adaptor.go  main.go
go/services/prism-infra-worker/clients/meta/: meta.go
go/services/prism-infra-worker/config/: fx.go  meta.go  provider.go
go/services/prism-infra-worker/workflows/ingest/: ingest.go  workflows.go
go/services/prism-ingest-event-listener/: event_handler.go  main.go
go/services/prism-ingest-event-listener/config/: ingest_event_listener.go  provider.go  temporal.go
go/services/prism-ingest-trigger/: main.go
go/services/prism-ingest-worker/: Dockerfile  main.go
go/services/prism-ingest-worker/clients/meta/: meta.go
go/services/prism-ingest-worker/config/: fx.go  ingest.go  provider.go  temporal.go
go/services/prism-ingest-worker/workflows/ingest/: fx.go  ingest.go  workflows.go
go/services/prism-ingest-worker/workflows/ingest/next/: ingest.go
go/services/prism-meta/: Dockerfile  main.go
go/services/prism-meta/cmd/: migrate.go  root.go  server.go
go/services/prism-meta/cmd/migrations/: 20231023011547_bootstrap.down.sql  20231023011547_bootstrap.up.sql
infra/dev/: Pulumi.dev.yaml  Pulumi.yaml  cluster.ts  index.ts  ingestion.ts  kubeconfig.yml  package-lock.json  package.json
infra/dev/k8s/: base.ts  ingest-worker.ts  meta.ts
infra/local/: Pulumi.yaml  index.ts  package-lock.json  package.json
misc/: get_partitions.json  ingest-event-listener.yaml  ingest-worker.yaml  ingest.json  query.yaml  record_new_partition.json  remap.vrl  vector.json
proto/: buf.gen.yaml  buf.work.yaml
proto/common/: buf.gen.yaml  buf.yaml
proto/common/prism/common/v1/: partition.proto
proto/prism/meta/v1/: meta.proto
proto/rpc/: buf.gen.yaml
proto/rpc/prism/meta/v1/: meta.proto
proto/rust/prism-common-v1/: Cargo.toml
proto/rust/prism-common-v1/src/: lib.rs
proto/rust/prism-rpc-meta-v1/: Cargo.toml
proto/rust/prism-rpc-meta-v1/src/: lib.rs
proto/workflow/: buf.gen.yaml  buf.yaml
proto/workflow/prism/ingest/v1/: ingest.proto
src/prism-ingest/: Cargo.toml  Dockerfile
src/prism-ingest/src/: ingest.rs  main.rs
src/prism-ingest/src/testdata/: demo.json
src/prism-meta/: Cargo.toml  Dockerfile
src/prism-meta/src/: main.rs  schema.sql
src/prism-proto/: Cargo.toml  build.rs
src/prism-proto/proto/: meta.proto
src/prism-proto/src/: lib.rs
src/prism-ql/: Cargo.toml
src/prism-ql/src/: ast.rs  diagnostics.rs  lib.rs  lower.rs  parser.rs  pql.lalrpop
src/prism-query/: Cargo.toml
src/prism-query/src/: config.rs  main.rs  providers.rs
src/prism-query/src/meta/: client.rs  provider.rs
src/prism-query/src/providers/: catalog_provider.rs  schema_provider.rs  table_provider.rs
