[workspace]
resolver = "2"
members = ["src/*", "proto/rust/*"]

[workspace.dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
aws-sdk-s3 = "0.33.0"
datafusion = "32.0.0"
envconfig = "0.10.0"
object_store = { version = "0.7.1", features = ["aws"] }
tokio = { version = "1.32.0", features = ["full"] }
