[package]
name = "prism-ingest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
datafusion = { workspace = true }
envconfig = { workspace = true }
tokio = { workspace = true }
object_store = { workspace = true }
url = "2.4.1"
