[package]
name = "prism-ingest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
datafusion = { workspace = true }
envconfig = { workspace = true }
tokio = { workspace = true }
object_store = { workspace = true }
url = "2.4.1"
bytes = "1.5.0"
futures = "0.3.28"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "std"] }
clap = { version = "4.4.7", features = ["derive"] }
serde = "1.0.190"
serde_json = "1.0.107"

prism-common-v1 = { path = "../../proto/rust/prism-common-v1" }
