[package]
name = "prism-meta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-once-cell = "0.5.3"
clap = { version = "4.4.6", features = ["derive"] }
envconfig.workspace = true
prism-proto = { path = "../prism-proto" }
sqlx = { version = "0.7.2", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
] }
tokio.workspace = true
tonic = "0.10.2"
tracing = "0.1.39"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "std"] }
