[package]
name = "prism-query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
datafusion = { workspace = true }
envconfig.workspace = true
futures = "0.3.28"
object_store = { version = "0.7.1", features = ["aws"] }
tokio.workspace = true
url = "2.4.1"
