[package]
name = "prism-query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
datafusion = { workspace = true }
envconfig.workspace = true
futures = "0.3.28"
object_store = { version = "0.7.1", features = ["aws"] }
tokio.workspace = true
url = "2.4.1"
tonic = "0.10.2"
chrono = "0.4.31"

prism-rpc-meta-v1 = { path = "../../proto/rust/prism-rpc-meta-v1" }
